# rausu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  README_JA.md  REQUIREMENTS.md  REQUIREMENTS_CN.md  SECURITY.md  SECURITY_CN.md  clippy.toml  config-test.yaml  config.example.yaml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-ghcr.yml
docs/: ACCEPTANCE_2_7A.md  ACCEPTANCE_2_7A_CN.md  ACCEPTANCE_2_8A.md  ACCEPTANCE_2_8A_CN.md  ANTHROPIC_PROVIDER.md  ANTHROPIC_PROVIDER_CN.md  ARCHITECTURE_DIRECTION.md  ARCHITECTURE_DIRECTION_CN.md  AWS_BEDROCK_PROVIDER.md  AWS_BEDROCK_PROVIDER_CN.md  AZURE_OPENAI_PROVIDER.md  AZURE_OPENAI_PROVIDER_CN.md  CHATGPT_SUBSCRIPTION_DESIGN.md  CHATGPT_SUBSCRIPTION_PROVIDER.md  CHATGPT_SUBSCRIPTION_PROVIDER_CN.md  CLAUDE_SUBSCRIPTION_PROVIDER.md  CLAUDE_SUBSCRIPTION_PROVIDER_CN.md  DEEPSEEK_PROVIDER.md  DEEPSEEK_PROVIDER_CN.md  GITHUB_COPILOT_PROVIDER.md  GITHUB_COPILOT_PROVIDER_CN.md  GOOGLE_AI_STUDIO_PROVIDER.md  GOOGLE_AI_STUDIO_PROVIDER_CN.md  LOCAL_PROXY_USAGE.md  LOCAL_PROXY_USAGE_CN.md  MESSAGES_API_PROXY_DESIGN.md  MINIMAX_PROVIDER.md  MINIMAX_PROVIDER_CN.md  MOONSHOT_PROVIDER.md  MOONSHOT_PROVIDER_CN.md  OBSERVABILITY.md  OBSERVABILITY_CN.md  OPENAI_PROVIDER.md  OPENAI_PROVIDER_CN.md  OPENROUTER_PROVIDER.md  OPENROUTER_PROVIDER_CN.md  PROTOCOL_BRIDGE_PLAN.md  README.md  README_CN.md  ROUTING.md  (+11 more)
src/: check.rs  init.rs  lib.rs  main.rs  setup.rs  validation.rs
src/auth/: chatgpt_oauth.rs  copilot.rs  middleware.rs  mod.rs  oauth.rs  (+1 more)
tests/: deepseek_test.rs  google_ai_studio_test.rs  integration_test.rs  moonshot_test.rs  observability_test.rs  openrouter_test.rs  zai_test.rs
(+31 files in other folders)
