[package]
name = "rausu"
version = "0.1.0"
edition = "2021"
description = "A high-performance LLM API Gateway — drop-in replacement for LiteLLM Proxy"
license = "MIT"
authors = ["Rausu Contributors"]

[[bin]]
name = "rausu"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
config = "0.15"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1"
thiserror = "2"
async-stream = "0.3"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
bytes = "1"
dirs = "6"
inquire = "0.9"
base64 = "0.22"
http = "1"
flate2 = "1"
zstd = "0.13"
jsonwebtoken = { version = "9", features = ["use_pem"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2", "service"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rcgen = "0.13"
tempfile = "3"

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
